# language_study

./: .gitignore  Dockerfile  Makefile  README.md  manage.py  pyproject.toml
cards/: admin.py  models.py
language_story/: asgi.py  settings.py  urls.py  wsgi.py
