[tool.poetry]
name = "language_study"
version = "0.1.0"
description = ""
authors = ["Oleg <obarnev@inbox.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.1"
Django = "3.2.8"
asgiref = "3.4.1"
"backports.entry-points-selectable" = "1.1.0"
CacheControl = "0.12.6"
cachy = "0.3.0"
certifi = "2021.10.8"
charset-normalizer = "2.0.7"
cleo = "0.8.1"
clikit = "0.6.2"
crashtest = "0.3.1"
distlib = "0.3.3"
filelock = "3.3.1"
html5lib = "1.1"
idna = "3.3"
keyring = "21.8.0"
lockfile = "0.12.2"
msgpack = "1.0.2"
packaging = "20.9"
pastel = "0.2.1"
pexpect = "4.8.0"
pkginfo = "1.7.1"
platformdirs = "2.4.0"
poetry = "1.1.11"
poetry-core = "1.0.7"
ptyprocess = "0.7.0"
pylev = "1.4.0"
pyparsing = "2.4.7"
pytz = "2021.3"
requests = "2.26.0"
requests-toolbelt = "0.9.1"
shellingham = "1.4.0"
six = "1.16.0"
sqlparse = "0.4.2"
tomlkit = "0.7.2"
urllib3 = "1.26.7"
virtualenv = "20.8.1"
webencodings = "0.5.1"
django-extensions = "^3.1.3"
django-environ = "^0.8.0"
djangorestframework = "^3.12.4"
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
